# simple-ralph-loop

./: CONTEXT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: qualify.yml
docs/adr/: 0001-host-isolation-via-seatbelt.md
src/ralph/: __init__.py  cli.py  environment.py  errors.py  gitcontext.py  launch.py  locking.py  loop.py  preflight.py  process.py  protocol.py  redaction.py
src/ralph/backends/: __init__.py  claude.py  opencode.py
tests/: harness.py  test_claude_preflight.py  test_cli.py  test_handoff_and_resume.py  test_launch_chain.py  test_loop_protocol.py  test_opencode_preflight.py  test_packaging_lifecycle.py  test_preflight.py  test_redaction.py  test_run_loop.py  test_sandbox_profile.py  test_timeouts_and_process.py  test_unsafe_allow_agents.py  test_unsafe_no_sandbox.py  test_worktree_locking.py
