[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-ralph-loop"
version = "0.1.0"
description = "A subscription-only loop for coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = []

[project.scripts]
ralph = "ralph.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
